--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "webpack-cli": "^5.1.4"
   },
   "description": "/main : 메인페이지 <br/> /map_main : 지도 검색 페이지 <br/> /login : 로그인페이지 <br/> /signup : 회원가입페이지 <br/> /findpw : 비밀번호찾기페이지 <br/>",
-  "main": "index.js",
+  "main": "app.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/HYERINI/SMU-Navi-fron.git"
