--- a/package.json
+++ b/package.json
@@ -88,5 +88,5 @@
   "bugs": {
     "url": "https://github.com/HYERINI/SMU-Navi-fron/issues"
   },
-  "homepage": "https://github.com/HYERINI/SMU-Navi-fron#readme"
+  "homepage": "https://smunavi.netlify.app"
 }
