--- a/jolpoo/package.json
+++ b/jolpoo/package.json
@@ -51,7 +51,9 @@
     "start": "react-scripts start",
     "build": "webpack",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d bundleBuild"
   },
   "eslintConfig": {
     "extends": [
